--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@ limitations under the License.
   </head>
 
   <body>
+  
+    <embed  src="/anuncioMP3.mp3" 
+            id="anuncioMP3" 
+            autostart="false" 
+            width="0" height="0" 
+            enablejavascript="true" 
+    />
+        
     <h1>Push Messaging &amp; Notifications</h1>
 
     <p>Available in <a href="https://www.chromestatus.com/feature/5416033485586432">Chrome 42+</a> &amp; <a href="https://www.chromestatus.com/feature/5480344312610816">Chrome 42+</a></p>
