--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ limitations under the License.
             enablejavascript="true" 
     /> -->
     
-    <audio controls="controls">
+    <audio controls="controls" autoplay="false">
         Your browser does not support the <code>audio</code> element.
         <source src="anuncioMP3.mp3" type="audio/mp3">
     </audio>
