--- a/index.html
+++ b/index.html
@@ -48,14 +48,8 @@ limitations under the License.
   </head>
 
   <body>
-  
-    <!-- <embed  src="/anuncioMP3.mp3" 
-            id="anuncioMP3" 
-            autostart="false" 
-            width="0" height="0" 
-            enablejavascript="true" 
-    /> -->
     
+    <!-- EL TAG audio SE AGREGA PARA SIMULAR LA REPRODUCCION DE AUDIO EN LA NOTIFICATION --> 
     <audio controls="controls" autoplay="false">
         Your browser does not support the <code>audio</code> element.
         <source src="anuncioMP3.mp3" type="audio/mp3">
